# Build example executable targets
example_get_info_exe = executable('example_get_info',
    sources: ['get_info.c'],
    include_directories: inc,
    link_with: smbus_sh_lib,
    dependencies: [bic_dep])

example_rtssm_dump_exe = executable('example_sw_rtssm_log',
    sources: ['sw_rtssm_log.c'],
    include_directories: inc,
    link_with: smbus_sh_lib,
    dependencies: [bic_dep])

example_vendor_id_exe = executable('example_vendor_id',
    sources: ['vendor_id.c'],
    include_directories: inc,
    link_with: smbus_sh_lib)

example_retimer_reset_exe = executable('example_retimer_reset',
    sources: ['retimer_reset.c'],
    include_directories: inc,
    link_with: smbus_sh_lib,
    dependencies: [bic_dep])

example_read_register_exe = executable('example_read_register',
    sources: ['read_register.c'],
    include_directories: inc,
    link_with: smbus_sh_lib,
    dependencies: [bic_dep])

example_flash_firmware_exe = executable('example_flash_firmware',
    sources: ['flash_firmware.c'],
    include_directories: inc,
    link_with: smbus_sh_lib,
    dependencies: [bic_dep])

example_tx_presets_exe = executable('example_tx_presets',
    sources: ['tx_presets.c'],
    include_directories: inc,
    link_with: smbus_sh_lib,
    dependencies: [bic_dep])

example_hw_rtssm_log_exe = executable('example_hw_rtssm_log',
    sources: ['hw_rtssm_log.c'],
    include_directories: inc,
    link_with: smbus_sh_lib,
    dependencies: [bic_dep])

example_fom_exe = executable('example_fom',
    sources: ['fom.c'],
    include_directories: inc,
    link_with: smbus_sh_lib,
    dependencies: [bic_dep])

example_fom_exe = executable('example_phy_info',
    sources: ['phy_info.c'],
    include_directories: inc,
    link_with: smbus_sh_lib,
    dependencies: [bic_dep])
